--- a/mutt-indicator.ui
+++ b/mutt-indicator.ui
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <!-- interface-requires gtk+ 3.0 -->
-  <object class="GtkListStore" id="model">
-    <columns>
-      <!-- column-name Path -->
-      <column type="gchararray"/>
-      <!-- column-name Dispaly -->
-      <column type="gchararray"/>
-    </columns>
-  </object>
   <object class="GtkBox" id="main_box">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -17,7 +9,6 @@
       <object class="GtkLabel" id="label_path">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes">Please add/remove the Mail Directory which need be monitored:</property>
       </object>
       <packing>
         <property name="expand">False</property>
@@ -30,13 +21,18 @@
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="shadow_type">in</property>
+        <property name="min_content_width">600</property>
+        <property name="min_content_height">300</property>
         <child>
           <object class="GtkTreeView" id="path_treeview">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="model">model</property>
+            <property name="margin_left">11</property>
+            <property name="margin_right">10</property>
+            <property name="margin_top">8</property>
+            <property name="margin_bottom">10</property>
             <child internal-child="selection">
-              <object class="GtkTreeSelection" id="treeview-selection2"/>
+              <object class="GtkTreeSelection" id="treeview-selection"/>
             </child>
           </object>
         </child>
@@ -65,7 +61,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkToolButton" id="tree-toolbutton-remove">
+          <object class="GtkToolButton" id="tree-toolbutton-del">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="icon_name">list-remove-symbolic</property>
